# nst

./: .gitignore  README.md  check_port.sh  cleanup.sh  config.json  latest.json  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  release.sh  script.sh
.github/workflows/: release.yml  windows-build.yml
app/: layout.tsx  page.tsx
app/(playground)/: layout.tsx
app/(playground)/arborist/: page.tsx  styles.css
app/(playground)/health/: page.tsx
app/(playground)/history/: page.tsx
app/(playground)/settings/: page.tsx
app/(playground)/starred/: page.tsx
app/(playground)/tree/: page.tsx  treeData.ts
backend/python/: build_binary.sh  dataorganization.py  install_uv.sh  main.py  pref.ipynb  prefect_workbook.ipynb  req.txt  requirements.txt  server.py  workbook.ipynb
components/: api-display.tsx  app-sidebar.tsx
components/ui/: card.tsx
docs/: SIGNING_SETUP.md  azure-signing-setup.md  macos-notarization-setup.md  windows-signing-setup.md
scripts/: build-python.ps1  generate_cert.ps1  generate_icons.sh
src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.windows.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  files.rs  main.rs  python_backend.rs
